Implemented plugins system
Deploy and configure plugins by set plugin list with `[cinch][plugins]`
attribute.
Plugins code must be located in `files/default/plugins/` directory,
named `{plugin}.rb`

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -14,6 +14,7 @@ suites:
   - name: default
     run_list:
       - recipe[moombot]
+      - recipe[moombot::plugins]
     attributes:
       moombot:
         name: moombot-dev
