Integration testing for moombot_plugin lwrp
Add a test cookbook `devbot` that define two plugins: Plugin1
& Plugin2.

Both are created and Plugin2 is deleted by `devbot::delete_plugin2`

Check that create/delete plugin recipes are called properly by creating
files in /tmp directory and assert they exists with serversepc.

`moombot::plugins` define a node attribute `[moombot:][plugin_list]` that is
updated dynamically when plugin is created or deleted. This attribute is
used for configuration template.

Fixed provider:
- notifies template create instead a service restart
- Fixed cookbook name when include a deleting recipe

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,14 +1,29 @@
 ---
 driver:
-  name: vagrant
+  name: docker
+  binary: docker
+  use_sudo: false
 
 provisioner:
   name: chef_zero
 
 platforms:
-  - name: debian-8.2
+  - name: debian-8
 
 suites:
-  - name: default
+  - name: moombot
     run_list:
       - recipe[moombot]
+    attributes:
+      moombot:
+        name: moombot-dev
+  - name: moombot-plugin-lwrp
+    run_list:
+      - recipe[moombot]
+      - recipe[devbot::delete_plugin2]
+    attributes:
+      moombot:
+        name: moombot-dev
+        plugins:
+          moombot: [ping]
+          devbot: [plugin1, plugin2]
