--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,7 +8,20 @@ provisioner:
   name: chef_zero
 
 platforms:
+  - name: debian-6
+  - name: debian-7
   - name: debian-8
+  - name: ubuntu-12.04
+  - name: ubuntu-14.04
+  - name: centos-5
+  - name: centos-6
+  - name: centos-7
+    driver_config:
+      dockerfile: test/dockerfiles/centos7
+      privileged: true
+      run_command: /usr/sbin/init
+      private_key:
+      public_key:
 
 suites:
   - name: moombot
