Exclude Style/MultilineMethodCallBraceLayout cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,3 +15,7 @@ AllCops:
     - cookbooks/**/*
     - vendor/**/*
     - test/dockerfiles/*
+
+Style/MultilineMethodCallBraceLayout:
+  Exclude:
+    - ./**/*
