--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,21 +12,16 @@ provisioner:
         level: debug
         first_level: debug
 
+verifier:
+  name: inspec
+
 platforms:
-  - name: debian-6
-  - name: debian-7
   - name: debian-8
-  - name: ubuntu-12.04
+  - name: debian-9
+  - name: debian-10
   - name: ubuntu-14.04
-  - name: centos-5
-  - name: centos-6
-  - name: centos-7
-    driver_config:
-      dockerfile: test/dockerfiles/centos7
-      privileged: true
-      run_command: /usr/sbin/init
-      private_key:
-      public_key:
+  - name: ubuntu-16.04
+  - name: ubuntu-18.04
 
 suites:
   - name: moombot
